# BankSystemTask

./: .clang-format  CMakeLists.txt  README.md
BankSystemLib/: BankSystem.cpp  BankSystem.hpp  Cash.cpp  Cash.hpp  Currency.cpp  Currency.hpp  Log.hpp  User.cpp  User.hpp
Sandbox/: main.cpp
coverage_report/: index.html
coverage_report/coverage/home/krstoyanov/Projects/BankSystemTask/BankSystemLib/: BankSystem.cpp.html  Cash.cpp.html  Cash.hpp.html  Currency.cpp.html  Log.hpp.html  User.cpp.html  User.hpp.html
tests/: BankSystem_test.hpp  Cash_test.hpp  Currency_test.hpp  Log_test.hpp  User_test.hpp  main_test.cpp
